delete and update bookmark feature
